0026306: Access to deleted object in ShapeFix_FixSmallSolid

Code corrected to avoid accessing element of sequence by reference after it is removed.